porcent box fixed , scrool container longer and export button smaller

--- a/src/Components/PieChart/PieChartForm.css
+++ b/src/Components/PieChart/PieChartForm.css
@@ -1,7 +1,7 @@
 #pieChart1 {
-  display: block;
-  height: 435px !important;
-  width: 865px !important;
-  margin-top: 40px !important;
-  margin: auto;
+  /* display: block;*/
+  /* height: 435px !important;
+  width: 865px !important; */
+  margin-top: -74px !important;
+  /* margin: auto;  */
 }
