--- a/src/Components/Report/ReportForm.css
+++ b/src/Components/Report/ReportForm.css
@@ -7,9 +7,9 @@
   width: 75%;
 }
 .container {
-  height: 500px;
+  height: 685px;
   overflow-y: scroll;
-  margin-bottom: 50px;
+  margin-bottom: 5px;
 }
 .exporticon {
   width: 34px;
@@ -39,15 +39,18 @@ fieldset {
 .pieChart {
   position: relative;
 }
+
 .box-yield__fail {
-  position: absolute;
-  top: 40%;
+  /* position: absolute; */
+  width: 145px;
+  margin-top: 30px;
+  margin-left: 60px;
   padding: 14px;
   border: 1px black solid;
 }
 .box-text {
   margin: 0;
-  font-size: 28px;
+  font-size: 18px;
 }
 .box-text:last-of-type {
   color: #e63946;
@@ -62,8 +65,8 @@ fieldset {
   height: inherit;
 }
 .btn-export {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 1px;
+  margin-bottom: 7px;
 }
 
 .container-format {
